 - move image from left ro right
User requests:
 - Add the ability to take a checkerboard pattern as input to the de-warping stage.
 - A way to measure DPI in-situ. Allow the user to draw a line on the pic and inform yasw that the
   actual physical length of this line is x. You could then compute DPI by measuring the length of
   the drawn line in pixels and divide by length input.
   o I assume you would calculate DPI on the cropped image. In that case, use the DPI to also
     calculate and display the physical dimensions of the page or a sub-set of the page as selected
     by a user-defined bounding box.
 - Under rotation filter, allow user to draw a line to indicate what is 'horizontal' - (maybe even
   use 'Shift' key to force a horizontal line, i.e. deltaY = 0) Use the drawn line to calculate a
   finer rotation angle to straighten the page. (maybe name the two filters 'orientation' and 'rotation'
   to distinguish between them).

201306xx; YASE 0.4
 - Fixed Ticket #2 (Image order not retained when project is reloaded.)
 - Fixed Ticket #1 (Display FileName instead of BaseName in the image list)

20130525; YASW 0.3 "yasw has reached one (1) user!"
 - About dialog
 - open -> recent projects
 - change selection color for dekeystoning and cropping
 - move all corners (dekeystonig, cropping) when pressing "control" while draging one of the corners


20121118; YASW 0.2
 - export to pdf
 - a lot of small fixes in handling to pages types (even/odd)
 - cleaning old code away (only one page type handling)
 - menu for adding/removing images
 - key "delete" deletes an image
 - key "pgup/pgdown" to move image
 - windows port (build on linux with mxe.cc)
 - remove add left/right in favor of one "add", wich defaults to left.

20121006; YASW 0.1
 - First release
 - handling two page types (left/right)
 - Saving / Loading project Settings
 - Exporting project to images
 - Propaging page/image settings to other pages/images
